# el-fantasy-data-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 53b94a9878cc_initial_schema.py
dags/: etl_dag.py  etl_new_data_dag.py  etl_old_data_dag.py
dags/data_pipeline/: euroleague_data_connector.py  euroleague_data_etl.py  model_training.py
dags/data_pipeline/configs/: new_box_score_data_config.yaml  old_box_score_data_config.yaml
dags/data_pipeline/queries/: select_train_data.sql
dags/models/: models.py
dags/utils/: db_utils.py
